assets/main.scss
---
#// Empty front-matter to ensure that Jekyll processes this file
---

// NOTE
// Some temporary styles just to make this look less awful while
// we work on it. Remove these as soon as styling work begins

html, body {
	margin: 0;
	height: 100%;
}

a[href$="#TODO"] {
	color: tomato;
	border-bottom-color: tomato;
}


abbr {
	text-decoration: none;
	border-bottom: 1px dotted black;
}

.no-wrap {
	white-space: nowrap;
}

aside.no-padding {
	padding-left:0;
	grid-row: span 7;

	p { padding-left: 1em }
	pre { margin: 0 }
}


iframe {
	border: none;
	margin-bottom: 1em;
	width: 100%;
}

table.o-manifest__table {
	// border-collapse: collapse;

	// tr {
	// 	background-color: #f2f2f2;

	// 	th {
	// 		text-align: right;
	// 		padding: 0.3em 0 0.3em 0.4em;
	// 	}

	// 	td {
	// 		padding: 0.3em;
	// 	}
	// }
	width: auto;
}

.o-manifest__example {
	width: 100%;
	margin-top: 0;
}

.o-website__hero--home {
	background-image: url('./images/home-page-hero.jpg');
}


// Blog styles introduce their own layout stuff, which isn't
// great. We possibly need to find a nicer way to do this.
$o-website-bottom-spacing: 28px;

.o-website__blog-listing {
	list-style: none;
	padding: 0;
}

.o-website__blog-post {
	margin-bottom: $o-website-bottom-spacing;

	// Specificity required to override o-layout styles
	&__title {
		margin-bottom: 8px !important;
	}
	&__description {
		margin-bottom: 4px !important;
	}
	&__meta {
		margin-bottom: 0 !important;
		font-size: 16px !important;
	}
}

